--- a/app/src/main/res/layout/fragment_add_item_detail.xml
+++ b/app/src/main/res/layout/fragment_add_item_detail.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/layout_feed_content"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
-  <android.support.design.widget.AppBarLayout
-    android:id="@+id/layout_bar"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_feed_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:elevation="@dimen/layout_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-    <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
-      android:layout_width="match_parent"
-      android:layout_height="?attr/actionBarSize"
-      android:animateLayoutChanges="true"
-      app:layout_scrollFlags="scroll|enterAlways"
-      app:popupTheme="@style/Toolbar">
-      <TextView
-        android:id="@+id/text_toolbar_title"
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/layout_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/detail_toolbar_label"
-        android:textColor="@android:color/white" />
-    </android.support.v7.widget.Toolbar>
-  </android.support.design.widget.AppBarLayout>
-  <android.support.v4.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    <include
-      layout="@layout/add_item_news"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_margin="@dimen/layout_margin"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-  </android.support.v4.widget.NestedScrollView>
+        android:layout_marginBottom="@dimen/bar_margin_bottom"
+        android:elevation="@dimen/layout_margin"
+        android:minHeight="?actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:animateLayoutChanges="true"
+            android:minHeight="?actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/Toolbar">
+
+            <TextView
+                android:id="@+id/text_toolbar_title"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/detail_toolbar_label"
+                android:textColor="@android:color/white" />
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <include
+            layout="@layout/add_item_news"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/layout_margin"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
