--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -1,48 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/search_content"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content">
-  <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/search_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <android.support.design.widget.AppBarLayout
-      android:id="@+id/layout_bar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:elevation="@dimen/elevation"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-      <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:animateLayoutChanges="true"
-        app:popupTheme="@style/Toolbar">
-        <TextView
-          android:id="@+id/text_toolbar_title"
-          style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:text="@string/edit_profile_toolbar_label"
-          android:textColor="@android:color/white" />
-      </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-    <include
-      layout="@layout/item_edit_profile_header"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/abc_list_item_padding_horizontal_material" />
-    <FrameLayout
-      android:id="@+id/layout_map_container"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
-      android:background="@color/primary_light"
-      android:gravity="top" />
-  </LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/layout_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/bar_margin_bottom"
+            android:elevation="@dimen/elevation"
+            android:minHeight="?actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?actionBarSize"
+                android:animateLayoutChanges="true"
+                app:popupTheme="@style/Toolbar">
+
+                <TextView
+                    android:id="@+id/text_toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/edit_profile_toolbar_label"
+                    android:textColor="@android:color/white" />
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+
+        <include
+            layout="@layout/item_edit_profile_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/abc_list_item_padding_horizontal_material" />
+
+        <FrameLayout
+            android:id="@+id/layout_map_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
+            android:background="@color/primary_light"
+            android:gravity="top" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
 
 
