--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,62 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/layout_profile_content"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  >
-  <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_profile_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <android.support.design.widget.AppBarLayout
-      android:id="@+id/layout_bar"
-      style="@style/CollapsingToolbarStyle"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      >
-      <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_collapseMode="pin"
-        app:popupTheme="@style/Toolbar">
-        <TextView
-          android:id="@+id/text_toolbar_title"
-          style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:text="@string/profile_toolbar_label"
-          android:textColor="@android:color/white" />
-      </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-    <include
-      android:id="@+id/anchor_header"
-      layout="@layout/profile_header"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center"
+    android:layout_height="match_parent">
 
-      android:scaleType="centerCrop"
-      app:layout_collapseMode="parallax"
-      tools:ignore="PrivateResource" />
-    <android.support.design.widget.FloatingActionButton
-      android:id="@+id/fab_edit_profile"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/fb_top_margin"
-      android:layout_marginStart="@dimen/horizontal_margin"
-      android:clickable="true"
-      android:src="@drawable/ic_edit_black_24dp"
-      app:fabSize="mini"
-      app:layout_anchor="@id/anchor_header"
-      app:layout_anchorGravity="bottom|left|end" />
-    <android.support.v7.widget.RecyclerView
-      android:id="@+id/view_my_feed_list"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-  </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/layout_bar"
+            style="@style/CollapsingToolbarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/bar_margin_bottom"
+            android:minHeight="?actionBarSize">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/Toolbar">
+
+                <TextView
+                    android:id="@+id/text_toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/profile_toolbar_label"
+                    android:textColor="@android:color/white" />
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+
+        <include
+            android:id="@+id/anchor_header"
+            layout="@layout/profile_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            app:layout_collapseMode="parallax"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_edit_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginTop="@dimen/fb_top_margin"
+            android:clickable="true"
+            android:src="@drawable/ic_edit_black_24dp"
+            app:fabSize="mini"
+            app:layout_anchor="@id/anchor_header"
+            app:layout_anchorGravity="bottom|left|end" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/view_my_feed_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
