--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -73,4 +73,7 @@
   <dimen name="text_size_16sp">16sp</dimen>
   <dimen name="text_size_14sp">14sp</dimen>
   <dimen name="text_size_12sp">12sp</dimen>
+
+  <!--Action Bar-->
+  <dimen name="bar_margin_bottom">10dp</dimen>
 </resources>
