--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -12,23 +12,36 @@
     app:popupTheme="@style/Toolbar">
     <include layout="@layout/toolbar_icon" />
   </android.support.v7.widget.Toolbar>
-  <ImageView
-    android:id="@+id/image_user_icon"
-    android:layout_width="@dimen/user_icon"
-    android:layout_height="@dimen/user_icon"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_gravity="center_horizontal"
-    android:adjustViewBounds="true" />
-  <include
-    layout="@layout/email_input"
+  <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="@dimen/layout_height_0dp"
-    android:layout_weight="3"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
-  <include
-    layout="@layout/reset_password_button"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/layout_height_0dp"
-    android:layout_weight="1.5" />
+    android:layout_height="match_parent"
+    android:padding="@dimen/padding_5dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+      <ImageView
+        android:id="@+id/image_user_icon"
+        android:layout_width="@dimen/user_icon"
+        android:layout_height="@dimen/user_icon"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_gravity="center_horizontal"
+        android:adjustViewBounds="true" />
+      <include
+        layout="@layout/email_input"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/layout_height_0dp"
+        android:layout_weight="2"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
+      <include
+        layout="@layout/reset_password_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/layout_height_0dp"
+        android:layout_weight="2"
+        android:layout_gravity="bottom"/>
+
+    </LinearLayout>
+  </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
