--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,23 +12,34 @@
     app:popupTheme="@style/Toolbar">
     <include layout="@layout/toolbar_icon" />
   </android.support.v7.widget.Toolbar>
-  <ImageView
-    android:id="@+id/image_user_icon"
-    android:layout_width="@dimen/user_icon"
-    android:layout_height="@dimen/user_icon"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_gravity="center_horizontal"
-    android:adjustViewBounds="true" />
-  <include
-    layout="@layout/sign_up_form"
+  <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="@dimen/layout_height_0dp"
-    android:layout_weight="3" />
-  <include
-    layout="@layout/sign_up_button"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/layout_height_0dp"
-    android:layout_weight="1"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
+    android:layout_height="wrap_content"
+    android:padding="@dimen/padding_5dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+<LinearLayout
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
+    <ImageView
+      android:id="@+id/image_user_icon"
+      android:layout_width="@dimen/user_icon"
+      android:layout_height="@dimen/user_icon"
+      android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+      android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+      android:layout_gravity="center_horizontal"
+      android:adjustViewBounds="true" />
+    <include
+      layout="@layout/sign_up_form"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/layout_height_0dp"
+      android:layout_weight="3" />
+    <include
+      layout="@layout/sign_up_button"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/layout_height_0dp"
+      android:layout_weight="1"
+      android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
+</LinearLayout>
+  </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
