--- a/app/src/main/res/layout/item_user_news_details.xml
+++ b/app/src/main/res/layout/item_user_news_details.xml
@@ -26,17 +26,23 @@
     app:layout_columnWeight="1"
     app:layout_gravity="center"
     tools:text="Today" />
-  <ImageView
-    android:id="@+id/image_user_photo"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+  <com.dbbest.amateurfeed.ui.customView.SquareLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
     android:adjustViewBounds="true"
-    android:maxHeight="@dimen/preview_icon"
-    android:maxWidth="@dimen/preview_icon"
     app:layout_columnSpan="2"
     app:layout_columnWeight="1"
     app:layout_gravity="center"
-    app:layout_rowSpan="2"
+    app:layout_rowSpan="2">
+  <ImageView
+    android:id="@+id/image_user_photo"
+    android:adjustViewBounds="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scaleType="centerCrop"
     tools:src="@mipmap/splash" />
+  </com.dbbest.amateurfeed.ui.customView.SquareLayout>
   <TextView
     android:id="@+id/text_status_user_news_label"
     android:layout_width="wrap_content"
