--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -11,19 +11,30 @@
     app:popupTheme="@style/Toolbar">
     <include layout="@layout/toolbar_icon" />
   </android.support.v7.widget.Toolbar>
-  <ImageView
-    android:id="@+id/image_user_icon"
-    android:layout_width="@dimen/user_icon"
-    android:layout_height="@dimen/user_icon"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-    android:layout_gravity="center_horizontal"
-    android:adjustViewBounds="true" />
-  <include
-    layout="@layout/login_password_input"
+  <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="3"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
-  <include layout="@layout/sign_in_button" />
+    android:layout_height="match_parent"
+    android:padding="@dimen/padding_5dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+      <ImageView
+        android:id="@+id/image_user_icon"
+        android:layout_width="@dimen/user_icon"
+        android:layout_height="@dimen/user_icon"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_gravity="center_horizontal"
+        android:adjustViewBounds="true" />
+      <include
+        layout="@layout/login_password_input"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material" />
+      <include layout="@layout/sign_in_button" />
+    </LinearLayout>
+  </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
